[gd_scene load_steps=4 format=3 uid="uid://bouyodfkcwtp"]

[ext_resource type="Script" path="res://start.gd" id="1_v5wud"]

[sub_resource type="InputEventAction" id="InputEventAction_rqh6d"]
action = &"r"

[sub_resource type="Shortcut" id="Shortcut_5ucek"]
events = [SubResource("InputEventAction_rqh6d")]

[node name="Start" type="Node2D"]
script = ExtResource("1_v5wud")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -688.0
offset_top = -392.0
offset_right = 8080.0
offset_bottom = 4672.0
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Tractor Battle 3D"
horizontal_alignment = 1

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_5ucek")
text = "
Press here to start

"

[node name="playerNumSelectLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Number of players"

[node name="playerNumContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="minus" type="Button" parent="ScrollContainer/VBoxContainer/playerNumContainer"]
layout_mode = 2
text = "-"

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/playerNumContainer"]
layout_mode = 2
text = "2"

[node name="plus" type="Button" parent="ScrollContainer/VBoxContainer/playerNumContainer"]
layout_mode = 2
text = "+"

[node name="playerKeyChangeLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Change players' keyset"

[node name="playerKeyContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ModeSelctLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Extra mode"

[node name="eModeContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="randContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="randomModeLabel" type="Label" parent="ScrollContainer/VBoxContainer/randContainer"]
layout_mode = 2
text = "Random extra mode"

[node name="CheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/randContainer"]
layout_mode = 2

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/playerNumContainer/minus" to="." method="_on_minus_button_down"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/playerNumContainer/plus" to="." method="_on_plus_button_down"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/randContainer/CheckButton" to="." method="_on_random_mode_button_toggled"]
